// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Permissions /> should render correctly 1`] = `
<Panel>
  <ListGroup
    bsClass="list-group"
  >
    <ListGroupItem
      allowFocus={false}
      disabled={false}
      key="test_create"
      onClick={[Function]}
    >
      <code>
        test_create
      </code>
      <Checkbox
        checked={true}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
    <ListGroupItem
      allowFocus={false}
      disabled={false}
      key="test_edit"
      onClick={[Function]}
    >
      <code>
        test_edit
      </code>
      <Checkbox
        checked={false}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
    <ListGroupItem
      allowFocus={false}
      disabled={true}
      key="test_remove"
      onClick={null}
    >
      <code>
        test_remove
      </code>
      <Checkbox
        checked={true}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
    <ListGroupItem
      allowFocus={false}
      disabled={true}
      key="test_view"
      onClick={null}
    >
      <code>
        test_view
      </code>
      <Checkbox
        checked={false}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
  </ListGroup>
</Panel>
`;

exports[`<Permissions /> should render no permission disabled when [props.administrator=true] 1`] = `
<Panel>
  <ListGroup
    bsClass="list-group"
  >
    <ListGroupItem
      allowFocus={false}
      disabled={false}
      key="test_create"
      onClick={[Function]}
    >
      <code>
        test_create
      </code>
      <Checkbox
        checked={true}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
    <ListGroupItem
      allowFocus={false}
      disabled={false}
      key="test_edit"
      onClick={[Function]}
    >
      <code>
        test_edit
      </code>
      <Checkbox
        checked={false}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
    <ListGroupItem
      allowFocus={false}
      disabled={false}
      key="test_remove"
      onClick={[Function]}
    >
      <code>
        test_remove
      </code>
      <Checkbox
        checked={true}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
    <ListGroupItem
      allowFocus={false}
      disabled={false}
      key="test_view"
      onClick={[Function]}
    >
      <code>
        test_view
      </code>
      <Checkbox
        checked={false}
        partial={false}
        pullRight={true}
      />
    </ListGroupItem>
  </ListGroup>
</Panel>
`;
